Port to 26.3 progress
Ported GLFW references to SDL.